<resources>
    <string name="app_name">MoneyTracker</string>
    <string name="hello_msg">Hello World!</string>
    <string name="name_lbl_hint">Название</string>
    <string name="count_lbl_hint">0 ₽</string>
    <string name="cost_with_currency">%1$s ₽</string>

    <string name="select_count_element">Выделено %1$d</string>

    <string name="tab_name_expense"> Расходы </string>
    <string name="tab_name_incomes"> Доходы </string>
    <string name="tab_name_balance"> Баланс </string>
    <string name="tab_name_test"> Тест </string>
    <string name="part_developed_text">Раздел находится в разработке</string>
    <string name="error_text">Упс, произошёл сбой, мы спешно устраняем данную ошибку</string>

    <string name="error_msg">Произошла ошибка</string>
    <string name="lbl_new">Новая запись</string>
    <string name="menu_delete">Удалить</string>
    <string name="Approve">Вы уверены?</string>
    <string name="titel_delete_elements">Удаление элементов</string>
    <string name="ma_titel">Учёт бюджета</string>
    <string name="auth_info">Ваш незаменимый помощник \n в управлении бюджетом</string>
    <string name="balance_total_lbl">ваш баланс</string>
    <string name="balance_exp_lbl">расход</string>
    <string name="balance_inc_lbl">доход</string>

    <array name="tabs_name">
        <item>@string/tab_name_expense</item>
        <item>@string/tab_name_incomes</item>
        <item>@string/tab_name_balance</item>
    </array>

</resources>
