<?xml version="1.0" encoding="utf-8"?>
<android.support.design.widget.CoordinatorLayout
    xmlns:android         ="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools           ="http://schemas.android.com/tools"
    android:id            ="@+id/activity_add"
    android:layout_width  ="match_parent"
    android:layout_height ="match_parent"
    android:background    ="@drawable/bg_pattern"
    tools:context         ="com.example.khokhlovart_loftschool.moneytracker.MainActivity"
    >
    <android.support.design.widget.AppBarLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <android.support.v7.widget.Toolbar
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/colorPrimary"
            android:elevation="@dimen/add_tool_elevation"
            app:title="@string/lbl_new"
            android:id="@+id/tool_bar"

            >
        </android.support.v7.widget.Toolbar>

        <android.support.v7.widget.CardView
            android:layout_width  = "match_parent"
            android:layout_height = "wrap_content"
            android:elevation     = "@dimen/add_card_view_elevat"
            app:layout_behavior   = "@string/appbar_scrolling_view_behavior">

        <LinearLayout
            android:layout_width  = "match_parent"
            android:layout_height = "match_parent"
            android:background    = "@color/back_main_layout"
            android:padding       = "@dimen/add_padding"
            android:weightSum     = "100"
            android:elevation     = "@dimen/add_elevation"
            android:orientation   = "horizontal"
            android:gravity       = "center_vertical"
            >

            <EditText
                android:layout_width  = "@dimen/no_size"
                android:layout_height = "wrap_content"
                android:layout_weight = "75"
                android:hint          = "@string/name_lbl_hint"
                android:textSize      = "@dimen/add_name_text_size"
                android:inputType     = "text"
                android:textColor     = "@color/black_text"
                android:textColorHint = "@color/main_hint_color"
                android:id            = "@+id/name"
                />

            <EditText
                android:layout_width  = "@dimen/no_size"
                android:layout_height = "wrap_content"
                android:layout_weight = "25"
                android:hint          = "@string/count_lbl_hint"
                android:textSize      = "@dimen/add_cost_text_size"
                android:inputType     = "number"
                android:textColor     = "@color/black_text"
                android:textColorHint = "@color/main_hint_color"
                android:id            = "@+id/cost"
                />

            <ImageButton
                android:layout_width   = "wrap_content"
                android:layout_height  = "wrap_content"
                android:minHeight      = "@dimen/add_plus_icon_h"
                android:minWidth       = "@dimen/add_plus_icon_w"
                android:layout_gravity = "right|center"
                android:background     = "@drawable/ic_add_gray_24dp"
                android:id             ="@+id/btnAdd"
                />
        </LinearLayout>
        </android.support.v7.widget.CardView>
    </android.support.design.widget.AppBarLayout>
</android.support.design.widget.CoordinatorLayout>